--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -1,18 +1,17 @@
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>
-  aims to help researchers get their work done
-  in less time and with less pain
-  by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
-  Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
+  O objetivo do <a href="{{site.swc_site}}">Software Carpentry</a>
+  e auxiliar pesquisadores a executar suas tarefas
+  em menos tempo e com menos esforço
+  pelo ensino de noções básicas de computação.
+  Esse workshop prático cobre conceitos e ferramentas,
+  incluindo o design de um programa, controle de versão, gerenciamento de dados,
+  e automação de tarefas.
+  Os Participantes são encorajados a se ajudarem
+  e a aplicar o que aprenderam em seus problemas de pesquisa.
 </p>
 <p align="center">
   <em>
-    For more information on what we teach and why,
-    please see our paper
+    Para mais informações chequem nosso paper
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
 </p>
