--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,26 +1,47 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Dia 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>18:30</td>  <td>Automatizando tarefas com o shell Unix</td> </tr>
+      <tr> <td>19:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>20:00</td>  <td>Revisão</td> </tr>
+      <tr> <td>20:30</td>  <td>Fim</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Dia 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>18:30</td>  <td>Automatizando tarefas com o shell Unix</td> </tr>
+      <tr> <td>19:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>20:00</td>  <td>Controle de versão com o Git</td> </tr>
+      <tr> <td>20:30</td>  <td>Fim</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Dia 3</h3>
+    <table class="table table-striped">
+      <tr> <td>18:30</td>  <td>Controle de versão com o Git</td> </tr>
+      <tr> <td>19:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>20:00</td>  <td>Construindo programas com Python</td> </tr>
+      <tr> <td>20:30</td>  <td>Fim</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Dia 4</h3>
+    <table class="table table-striped">
+      <tr> <td>18:30</td>  <td>Construindo programas com Python</td> </tr>
+      <tr> <td>19:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>20:00</td>  <td>Revisão</td> </tr>
+      <tr> <td>20:30</td>  <td>Fim</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Dia 5</h3>
+    <table class="table table-striped">
+      <tr> <td>18:30</td>  <td>Construindo programas com Python</td> </tr>
+      <tr> <td>19:30</td>  <td>Coffee</td> </tr>
+      <tr> <td>20:00</td>  <td>Revisão</td> </tr>
+      <tr> <td>20:30</td>  <td>Fim</td> </tr>
     </table>
   </div>
 </div>
