--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="col-md-6">
-    <h3 id="syllabus-shell">The Unix Shell</h3>
+    <h3 id="syllabus-shell">O Shell Unix</h3>
     <ul>
-      <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
+      <li>Arquivos e diretórios</li>
+      <li>Histórico e completando com o tab</li>
+      <li>Pipes e redirecionamento</li>
+      <li>Looping em arquivos</li>
+      <li>Criando e executando shell scripts</li>
       <li>Finding things</li>
-      <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
+      <li><a href="{{site.swc_pages}}/shell-novice/reference">Referência...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-python">Programming in Python</h3>
+    <h3 id="syllabus-python">Programando em Python</h3>
     <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li>Usando bibliotexas</li>
+      <li>Manipulando arrays</li>
+      <li>Lendo e plotando dados</li>
+      <li>Criando e usando funções</li>
+      <li>Loops e condicionais</li>
+      <li>Programação defensiva</li>
+      <li>Usando a linha de comando do Python</li>
+      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referências...</a></li>
     </ul>
   </div>
   <!--
@@ -54,20 +54,20 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h3 id="syllabus-git">Version Control with Git</h3>
+    <h3 id="syllabus-git">Controle de versão com Git</h3>
     <ul>
-      <li>Creating a repository</li>
-      <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
-      <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
-      <li>Ignoring files</li>
-      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Resolving conflicts</li>
-      <li>Open licenses</li>
-      <li>Where to host work, and why</li>
-      <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+      <li>Criando repositórios</li>
+      <li>Gravando mudanças nos qrquivos: <code>add</code>, <code>commit</code>, ...</li>
+      <li>Visualizando mudanças: <code>status</code>, <code>diff</code>, ...</li>
+      <li>Ignorando arquivos</li>
+      <li>Trabalhando na web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
+      <li>Resolvendo conflitos</li>
+      <li>Licenças abertas</li>
+      <li>Onde manter seu trabalho e porquê.</li>
+      <li><a href="{{site.swc_pages}}/git-novice/reference">Referências...</a></li>
     </ul>
   </div>
-  <div class="col-md-6">
+  <!-- <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
       <li>Reading and sorting data</li>
@@ -80,7 +80,7 @@
       <li>Programming with databases</li>
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
-  </div>
+  </div> -->
     <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
