--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,7 +34,7 @@
       <ul class="nav navbar-nav">
 
 	{% comment %} Always show code of conduct. {% endcomment %}
-        <li><a href="{{ page.root }}{% link CONDUCT.md %}">Code of Conduct</a></li>
+        <li><a href="{{ page.root }}{% link CONDUCT.md %}">Código de conduta</a></li>
 
         {% if site.kind == "lesson" %}
 	{% comment %} Show setup instructions. {% endcomment %}
@@ -67,18 +67,18 @@
 	{% endif %}
 
 	{% comment %} Always show license. {% endcomment %}
-        <li><a href="{{ page.root }}{% link LICENSE.md %}">License</a></li>
+        <li><a href="{{ page.root }}{% link LICENSE.md %}">Licença</a></li>
 	{% if page.source %}
 	{% if page.source == "Rmd" %}
 	<li><a href="{{site.github.repository_url}}/edit/gh-pages/{{page.path|replace: "_episodes", "_episodes_rmd" | replace: ".md", ".Rmd"}}">Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
 	{% endif %}
 	{% else %}
-	<li><a href="{{site.github.repository_url}}/edit/gh-pages/{{page.path}}">Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
+	<li><a href="{{site.github.repository_url}}/edit/gh-pages/{{page.path}}">Melhore nossa página <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
 	{% endif %}
       </ul>
       <form class="navbar-form navbar-right" role="search" id="search" onsubmit="google_search(); return false;">
         <div class="form-group">
-          <input type="text" id="google-search" placeholder="Search..." aria-label="Google site search">
+          <input type="text" id="google-search" placeholder="Busca..." aria-label="Google site search">
         </div>
       </form>
     </div>
