--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,8 +1,8 @@
 <p id="who">
-  <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  <strong>Quem:</strong>
+  O curso e focado em estudantes de pós-graduação e outros pesquisadores.
   <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+    Não é necessário nenhum conhecimento prévio nas ferramentas
+    que serão apresentadas no workshop.
   </strong>
 </p>
